--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,184 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Chelsea+Market&display=swap');
+
+:root {
+  --mainGreen: #2ecc71;
+  --deepBlue: #130f40;
+  --mainWhite: #f3f3f3;
+  --mainDark: #2C3A47;
+  --mainYellow: #ffa400;
+  --lightBlue: #7ed6df;
+  --mainRed: #e84118;
+  --mainCard: #f6e58d;
+  --mainShadow: rgba(0, 0, 0, 0.75);
+}
+
+body {
+  overflow-x: hidden;
+
+}
+
+.text-title {
+  font-family: 'Chelsea Market',
+    cursive;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+}
+
+.text-blue {
+  color: var(--deepBlue);
+}
+
+App {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.main-container {
+  border: 1px solid var(--mainYellow);
+  background-color: rgb(235, 235, 235);
+  min-height: 50vh;
+  flex-wrap: wrap;
+  box-shadow: 0px 16px 9px -8px var(--mainShadow);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+.padding-fav {
+  padding-left: 60px !important;
+  padding-right: 0px !important;
+}
+
+.card-body {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  box-shadow: 0px 4px 16px -1px var(--mainShadow);
+  height: 20vh;
+  border-radius: 5px;
+  background-color: var(--mainCard) !important;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: space-around;
+  justify-content: space-evenly;
+  transition: 0.5s ease-in;
+  color: var(--mainDark);
+  min-width: 20vw;
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover {
+  background-color: rgba(246, 229, 141, 0.5) !important;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fas.fa-heart {
+  color: var(--mainRed);
+
+}
+
+.container-fluid {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.card-click-able,
+.card-click-able:hover {
+  cursor: pointer;
+}
+
+.fav-section {
+  width: 80vw;
+}
+
+.day {
+  color: black;
+  background-color: white;
+}
+
+.night {
+  color: #5692e6;
+  background-color: #142b41;
+}
+
+
+
+
+footer {
+  line-height: 34px;
+  height: 34px;
+  display: block;
+  text-align: right;
+  padding: 3rem;
+  position: fixed;
+  bottom: 2px;
+  right: 0px;
+  width: 100%;
+}
+
+footer>label:first-child {
+  display: inline-block;
+  position: relative;
+  top: -0.6rem;
+  color: red;
+  font-weight: bold;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked+.slider {
+  background-color: #2196f3;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
