--- a/src/scenes/common/components/Card/style.scss
+++ b/src/scenes/common/components/Card/style.scss
@@ -20,7 +20,7 @@
   justify-content: space-evenly;
   transition: 0.5s ease-in;
   color: $mainDark;
-  max-width: 13vw;
+  min-width: 13vw;
 
   &:hover {
     background-color: rgba(246, 229, 141, 0.5) !important;
