added favoriteCities to local storage

--- a/src/scenes/common/components/Navigation/style.scss
+++ b/src/scenes/common/components/Navigation/style.scss
@@ -5,8 +5,11 @@
 }
 
 .container-fluid {
-  padding-right: 0px;
-  padding-left: 0px;
+  &.nav-bar {
+    padding-right: 0px;
+    padding-left: 0px;
+    height: 10vh;
+  }
 }
 
 .nav-item a,
