--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
-  overflow-x: auto;
+  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 App {
   text-align: center;
@@ -17,6 +19,10 @@ App {
 .night {
   color: #5692e6;
   background-color: #142b41;
+}
+.container-fluid.day,
+.container-fluid.night {
+  height: 90vh;
 }
 span {
   color: black;
