--- a/src/scenes/common/components/Footer/style.css
+++ b/src/scenes/common/components/Footer/style.css
@@ -8,12 +8,11 @@ footer {
   bottom: 2px;
   right: 0px;
   width: 100%;
-
-  >label:first-child {
-    display: inline-block;
-    position: relative;
-    top: -0.6rem;
-    color: red;
-    font-weight: bold;
-  }
+}
+footer > label:first-child {
+  display: inline-block;
+  position: relative;
+  top: -0.6rem;
+  color: red;
+  font-weight: bold;
 }
