--- a/src/scenes/common/components/Card/style.scss
+++ b/src/scenes/common/components/Card/style.scss
@@ -11,7 +11,6 @@
 
 .card {
   box-shadow: 0px 4px 16px -1px $mainShadow;
-  height: 20vh;
   border-radius: 5px;
   background-color: $mainCard !important;
   display: flex;
@@ -20,7 +19,7 @@
   justify-content: space-evenly;
   transition: 0.5s ease-in;
   color: $mainDark;
-  min-width: 13vw;
+  min-width: 11vw !important;
 
   &:hover {
     background-color: rgba(246, 229, 141, 0.5) !important;
