--- a/src/scenes/common/components/Navigation/style.scss
+++ b/src/scenes/common/components/Navigation/style.scss
@@ -4,6 +4,11 @@
   background-color: $mainDark;
 }
 
+.navbar-expand .navbar-nav {
+  flex-direction: row;
+  align-items: center;
+}
+
 .container-fluid {
   &.nav-bar {
     padding-right: 0px;
@@ -21,4 +26,8 @@ h5 {
 .nav-item {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.style-text {
+  color: $mainWhite;
 }
