--- a/src/scenes/common/components/Slider/style.scss
+++ b/src/scenes/common/components/Slider/style.scss
@@ -1,8 +1,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 3rem;
+  height: 1.2rem;
 
   input {
     display: none;
@@ -23,10 +23,9 @@
   &:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
+    height: 1.1rem;
+    width: 1.1rem;
+    left: 0.1rem;
     background-color: white;
     -webkit-transition: 0.4s;
     transition: 0.4s;
@@ -43,9 +42,11 @@ input {
   }
 
   &:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(1.6rem);
+    -ms-transform: translateX(1.6rem);
+    transform: translateX(1.6rem);
+    -moz-transform: translateX(1.6rem);
+    -o-transform: translateX(1.6rem);
   }
 }
 
