--- a/src/scenes/common/variables.scss
+++ b/src/scenes/common/variables.scss
@@ -1,6 +1,7 @@
   $mainGreen: #2ecc71;
   $deepBlue: #130f40;
   $mainWhite: #f3f3f3;
+  $mainBlack:#1e272e;
   $mainDark: #2C3A47;
   $mainYellow: #ffa400;
   $lightBlue: #7ed6df;
