--- a/src/scenes/Home/components/Main/style.scss
+++ b/src/scenes/Home/components/Main/style.scss
@@ -2,7 +2,7 @@
 
 .main-container {
     border: 1px solid $mainYellow;
-    background-color: rgb(235, 235, 235);
+    background-color: $lightBlue;
     min-height: 50vh;
     flex-wrap: wrap;
     box-shadow: 0px 16px 9px -8px $mainShadow;
