--- a/src/scenes/common/components/Slider/style.css
+++ b/src/scenes/common/components/Slider/style.css
@@ -3,8 +3,7 @@
   display: inline-block;
   width: 3rem;
   height: 1.2rem;
-
-  input {
-    display: none;
-  }
+}
+.switch input {
+  display: none;
 }
