--- a/src/App.scss
+++ b/src/App.scss
@@ -1,136 +1,145 @@
-@import './scenes/common/variables.scss';
+@import "./scenes/common/variables.scss";
 
 body,
 html {
-  overflow-x: hidden;
-  height: 100%;
-  width: 100%;
+	overflow-x: hidden;
+	height: 100%;
+	width: 100%;
+	scroll-behavior: smooth;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
 }
 
 App {
-  text-align: center;
-  margin: 0;
-  padding: 0;
+	text-align: center;
+	margin: 0;
+	padding: 0;
 }
 
-
-
-
 .day {
-  color: $mainBlack;
-  background-color: $mainWhite;
+	color: $mainBlack;
+	background-color: $mainWhite;
 }
 
 .night {
-  color: $mainWhite;
-  background-color: $mainBlack;
+	color: $mainWhite;
+	background-color: $mainBlack;
 }
 
-
-
-
-
+@media (min-width: 300px) and (max-width: 575px) {
+	.container-fluid &.day,
+	.container-fluid &.night,
+	& .day,
+	& .night {
+		min-height: 100vh !important;
+		width: 100% !important;
+		margin: 0px !important;
+		padding: 0px !important;
+	}
+	&.container-fluid {
+		margin: 0px !important;
+		padding: 0px !important;
+		height: 100%;
+	}
+}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
+	.container-fluid &.day,
+	.container-fluid &.night,
+	& .day,
+	& .night {
+		min-height: 100vh !important;
+		width: 100% !important;
+		margin: 0px !important;
+		padding: 0px !important;
+	}
 
-  .container-fluid &.day,
-  &.night {
-    height: 100% !important;
-    width: 100% !important;
-    margin: 0px !important;
-    padding: 0px !important;
-  }
-
-  &.container-fluid {
-    margin: 0px !important;
-    padding: 0px !important;
-    height: 100%;
-
-  }
+	&.container-fluid {
+		margin: 0px !important;
+		padding: 0px !important;
+		height: 100%;
+	}
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+	.container-fluid &.day,
+	&.night {
+		height: 100vh !important;
+		width: 100vw !important;
+	}
 
-  .container-fluid &.day,
-  &.night {
-    height: 100vh !important;
-    width: 100vw !important;
-  }
-
-  &.container-fluid {
-    margin: 0px !important;
-    padding: 0px !important;
-    height: 100vh;
-
-  }
-
+	&.container-fluid {
+		margin: 0px !important;
+		padding: 0px !important;
+		height: 100vh;
+	}
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+	.container-fluid &.day,
+	&.night {
+		height: 100vh !important;
+		width: 100vw !important;
+	}
 
-  .container-fluid &.day,
-  &.night {
-    height: 100vh !important;
-    width: 100vw !important;
-  }
-
-  &.container-fluid {
-    margin: 0px !important;
-    padding: 0px !important;
-    height: 100vh;
-
-  }
+	&.container-fluid {
+		margin: 0px !important;
+		padding: 0px !important;
+		height: 100vh;
+	}
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
+	.container-fluid &.day,
+	&.night {
+		height: 100vh !important;
+		width: 100vw !important;
+	}
 
-  .container-fluid &.day,
-  &.night {
-    height: 100vh !important;
-    width: 100vw !important;
-  }
-
-  &.container-fluid {
-    margin: 0px !important;
-    padding: 0px !important;
-    height: 100vh;
-
-  }
+	&.container-fluid {
+		margin: 0px !important;
+		padding: 0px !important;
+		height: 100vh;
+	}
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// .container-fluid {
-
-//   &.day,
-//   &.night {
-//     height: 100vh;
-//     width: 100vw;
-//   }
-// }
-
-
 span {
-  color: black;
+	color: black;
+}
+
+//reset CSS
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+/* Remove default padding */
+ul[class],
+ol[class] {
+	padding: 0;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+	margin: 0;
 }
